# -imt2531-2019-exam-sondrewr

./: CMakeLists.txt  README.md
lib/GFX/: gfx.h
lib/assimp/include/assimp/: defs.h
lib/assimp/test/models/PLY/: cube_test.ply
lib/assimp/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf
lib/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
resources/shaders/: ambientLight.compute  common.glsl  debug_lightFrustum.frag  debug_lightFrustum.vert  directionalLight.compute  geometry.frag  geometry.vert  post_bloomBlur.compute  post_bloomComposite.compute  post_bloomExtract.compute  post_distanceFog.compute  post_grading.compute  post_skybox.compute  post_testShader.compute  renderToScreen.frag  renderToScreen.vert  spotLight.compute
src/: main.cpp
src/engine/: CMakeLists.txt  CubeVertex.h  Enviorment.cpp  Enviorment.h  Functions.h  Menu.cpp  Menu.h  PerlinNoise.cpp  PerlinNoise.h  Weather.cpp  Weather.h  consts.h  functions.cpp
src/renderer/: AmbientLight.cpp  AmbientLight.h  Buffer.h  CMakeLists.txt  CameraData.cpp  CameraData.h  ColorTexture.cpp  ColorTexture.h  DepthStencilTexture.cpp  DepthStencilTexture.h  DirectionalLight.cpp  DirectionalLight.h  ExtraMaterial.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  ImageTexture.cpp  ImageTexture.h  LightCallback.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderContext.cpp  RenderContext.h  ShaderProgram.cpp  ShaderProgram.h  ShadowDirectionalLight.cpp  ShadowDirectionalLight.h  SpotLight.cpp  SpotLight.h  VertexAttribArray.cpp  VertexAttribArray.h  defines.h
src/renderer/scenegraph/: CMakeLists.txt  CustomNode.h  GeometryNode.cpp  GeometryNode.h  GroupNode.cpp  GroupNode.h  LightNode.h  Node.cpp  Node.h  PerspectiveCameraNode.cpp  PerspectiveCameraNode.h
